--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -12,6 +12,8 @@ $buttonMods: (
 /*              Buttons                          */
 /* ============================================= */
 
+/* I removed the variation class 'default' from HTML and let the btn with the default background */
+
 .btn {
   margin-top: 15px;
   width: 100%;
