--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -32,6 +32,6 @@
   @import url($font-url__google);
 }
 
-@function em($target, $context: $base__font-size) {
+@function em($target, $context: $font-size__base) {
   @return ($target / $context) * 1em;
 }
