--- a/css/styles.css
+++ b/css/styles.css
@@ -576,6 +576,7 @@ a {
 /* ============================================= */
 /*              Buttons                          */
 /* ============================================= */
+/* I removed the variation class 'default' from HTML and let the btn with the default background */
 .btn {
   margin-top: 15px;
   width: 100%;
