--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -26,7 +26,7 @@ $border__radius: 5px;
 $font-url__google: "https://fonts.googleapis.com/css?family=Lato:300,400,700,900";
 
 $font-family__primary: "Lato", sans-serif;
-$base__font-size: 16px;
+$font-size__base: 16px;
 
 $font-weight__thin: 100;
 $font-weight__light: 300;
