--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,7 @@ a {
 .container {
   padding: 0 10px;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .container {
     max-width: 1400px;
     display: block;
@@ -414,7 +414,7 @@ a {
   flex-direction: column;
   padding: 1em 10px;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .row {
     flex-direction: row;
   }
@@ -427,7 +427,7 @@ a {
   padding: 10px;
   border-radius: 5px;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   [class^=col] {
     display: flex;
     justify-content: center;
@@ -477,7 +477,7 @@ a {
   flex-basis: 100%;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   [class^=col] + [class^=col] {
     margin-left: 10px;
   }
@@ -539,7 +539,7 @@ a {
   display: flex;
   flex-direction: column;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .nav {
     flex-direction: row;
     justify-content: flex-end;
@@ -555,7 +555,7 @@ a {
   width: 100%;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .nav-link {
     flex-basis: 100px;
   }
@@ -566,7 +566,7 @@ a {
   background-color: #58e1c1;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .logo {
     margin-left: initial;
     margin-right: initial;
@@ -586,8 +586,12 @@ a {
   text-transform: uppercase;
   border-radius: 5px;
   background-color: #51ddfc;
+  transition: background-color 0.2s ease-out;
 }
-@media (max-width: 768px) {
+.btn:hover {
+  background-color: #9cecfd;
+}
+@media (min-width: 768px) {
   .btn {
     padding: 10px 30px;
   }
@@ -598,18 +602,34 @@ a {
 
 .error {
   background-color: #e4757a;
+  transition: background-color 0.2s ease-out;
+}
+.error:hover {
+  background-color: #f1b5b8;
 }
 
 .info {
   background-color: #927bc1;
+  transition: background-color 0.2s ease-out;
+}
+.info:hover {
+  background-color: #bdafd9;
 }
 
 .success {
   background-color: #63cc82;
+  transition: background-color 0.2s ease-out;
+}
+.success:hover {
+  background-color: #9ddfb0;
 }
 
 .warning {
   background-color: #fd7856;
+  transition: background-color 0.2s ease-out;
+}
+.warning:hover {
+  background-color: #feb4a2;
 }
 
 /* ============================================= */
