adjusts button font colors and other minor details

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -17,7 +17,7 @@ $buttonMods: (
 .btn {
   margin-top: 15px;
   width: 100%;
-  color: $color__base;
+  color: $color__white;
   border: none;
   padding: 10px 0;
   text-transform: uppercase;
