--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -31,6 +31,12 @@ $columnNumber: 12;
   }
 }
 
+.centered {
+  @include mediaQuery("tablet") {
+    @include centered;
+  }
+}
+
 .row {
   display: flex;
   flex-direction: column;
