--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,14 @@ a {
   }
 }
 
+@media (min-width: 768px) {
+  .centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .row {
   display: flex;
   flex-direction: column;
@@ -580,7 +588,7 @@ a {
 .btn {
   margin-top: 15px;
   width: 100%;
-  color: #777;
+  color: #fff;
   border: none;
   padding: 10px 0;
   text-transform: uppercase;
